<resources>
    <string name="app_name">DostChat</string>
    <string name="scrollingFABBehavior" translatable="false">com.dostchat.dost.ui.ScrollingFABBehavior</string>
    <string name="auth_type" translatable="false">com.dostchat.dost</string>
    <string name="key_message_notifications_settings_light" translatable="false">message_notifications_settings_light</string>
    <string name="key_message_group_notifications_settings_tone" translatable="false">message_group_notifications_settings_tone</string>
    <string name="key_message_group_notifications_settings_vibrate" translatable="false">message_group_notifications_settings_vibrate</string>
    <string name="key_message_group_notifications_settings_light" translatable="false">message_group_notifications_settings_light</string>
    <string name="key_call_notifications_settings_vibrate" translatable="false">call_notifications_settings_vibrate</string>
    <string name="key_enter_send" translatable="false">enter_send</string>
    <string name="key_message_font_size" translatable="false">message_font_size</string>
    <string name="key_wallpaper_message" translatable="false">wallpaper_message</string>
    <string name="key_conversations_tones" translatable="false">conversation_tones</string>
    <string name="key_message_notifications_settings_tone" translatable="false">message_notifications_settings_tone</string>
    <string name="key_call_notifications_settings_tone" translatable="false">call_notifications_settings_tone</string>
    <string name="key_message_notifications_settings_vibrate" translatable="false">message_notifications_settings_vibrate</string>
    <string name="picture_transition" translatable="false">Picture transition</string>
    <string name="user_image_transition" translatable="false">userImage</string>
    <string name="user_name_transition" translatable="false">userName</string>
    <string name="app_service_name" translatable="false">main service</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="date_format_today">HH:mm</string>
    <string name="date_format_current_month">dd/MM/yyyy HH:mm</string>
    <string name="date_format_yesterday">YESTERDAY</string>
    <string name="date_format">dd/MM/yy</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_Friends">Friends</string>
    <string name="title_conversations">Chats</string>
    <string name="title_settings">Settings</string>
    <string name="title_feed_back"><![CDATA[Help & About]]></string>
    <string name="more">More</string>
    <string name="title_sign_out">Log out</string>
    <string name="selected_count">%1$s selected</string>
    <string name="icon_no_calls">No Calls</string>
    <string name="icon_crash">\Crash</string>
    <string name="icon_update">\Icon</string>
    <string name="icon_no_contacts">No Contacts</string>
    <string name="icon_no_conversations">No Chat</string>
    <string name="icon_menu_home">\ue800</string>
    <string name="icon_menu_chat_on">\ue83f</string>
    <string name="icon_menu_entertainment">\ue824</string>
    <string name="icon_menu_news">\ue853</string>
    <string name="icon_menu_shopping">\ue82e</string>
    <string name="icon_menu_my_profile">\ue82a</string>
    <string name="icon_menu_settings">\ue810</string>
    <string name="icon_menu_help_feedback">\ue87d</string>
    <string name="icon_menu_about_us">\ue87c</string>
    <string name="icon_menu_share">\ue84b</string>
    <string name="icon_menu_edit">\ue802</string>
    <string name="number">Mobile number</string>
    <string name="NoMessages">There\'s no conversations yet, you may start one now</string>
    <string name="NoCalls">There\'s no calls yet, you may start one now</string>
    <string name="error_response">Unable to update.</string>
    <string name="NoContacts">There is no contacts .Please try again later or add new one</string>
    <string name="type_msg">Type a message</string>
    <string name="NoResult">Nothing</string>
    <string name="error_response_contacts">Unable to update your contacts.</string>
    <string name="error_response_conversations">Unable to update conversations.</string>
    <string name="error_response_groups">Unable to update groups.</string>
    <string name="error_response_messages">Unable to update messages.</string>
    <string name="name_is_too_short">the name is too short</string>
    <string name="select_picture">select an image</string>
    <string name="new_group">New group</string>
    <string name="starred_messages">Starred messages</string>
    <string name="status">Status</string>
    <string name="settings">Settings</string>
    <string name="refresh_contacts">Refresh</string>
    <string name="search">Search</string>
    <string name="add_contact">addContact</string>
    <string name="new_message">New Message</string>
    <string name="use_whats_clone">hey i\'m using …</string>
    <string name="title_activity_add_members_to_group">New group</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_profile">Profile</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="view_in_ad_book">View in address book</string>
    <string name="hello_welcome_to_whats_clone">Welcome</string>
    <string name="next">Next</string>
    <string name="set_back_and_keep_calm_you_will_receive_an_sms_of_verification">Set back and keep calm you will receive an sms of verification</string>
    <string name="resend">You didn\'t receive any code? Resend</string>
    <string name="enter_the_code_below_to_verify">Enter the code below to verify</string>
    <string name="enter_your_code">-- -- -- -- -- --</string>
    <string name="ok">OK</string>
    <string name="please_enter_your_ver_code">Please enter your verification code</string>
    <string name="enter_a_val_number">Enter a valid mobile phone</string>
    <string name="change_number">Change number</string>
    <string name="invite">Invite</string>
    <string name="your_current_status">Your current status</string>
    <string name="select_your_new_status">Select your new status</string>
    <string name="title_activity_status">Status</string>
    <string name="Make_sure_delete_status">Do you want to delete this status</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="delete">Delete</string>
    <string name="delete_status">Delete status</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="write_something">Write something</string>
    <string name="error_response_status">Unable to get status</string>
    <string name="title_activity_edit_status">Edit status</string>
    <string name="deleteALL">Delete All</string>
    <string name="oops_something">Oops something went wrong </string>
    <string name="oops_something_crashed">Oops !! something went wrong . Please send a report to the developer</string>
    <string name="no_status"> No status </string>
    <string name="no_username"> No username </string>
    <string name="edit_status_activity_title">Edit Your Status</string>
    <string name="title_activity_edit_name">Enter your name</string>
    <string name="title_select_contacts">Select  contact</string>
    <string name="success_response_contacts">Your contacts has been  updated successfully</string>
    <string name="edit_group_name">edit group name</string>
    <string name="exit">Exit</string>
    <string name="shareContact">Share contact</string>
    <string name="isTyping">Typing  …</string>
    <string name="isOffline">Offline</string>
    <string name="isOnline">Online</string>
    <string name="lastSeen">Last seen</string>
    <string name="call">Call</string>
    <string name="attach">Attach</string>
    <string name="search_">Search …</string>
    <string name="add_new_member">Add</string>
    <string name="type_group_subject_here">Type group subject here …</string>
    <string name="provide_group_subject_and_optional_group_icon">Provide group subject and optional group icon</string>
    <string name="title_activity_edit_group_name">Enter new subject</string>
    <string name="attach_contact">Contact</string>
    <string name="attach_video">Video</string>
    <string name="attach_video_record">Record video</string>
    <string name="attach_location">Location</string>
    <string name="attach_audio">Audio</string>
    <string name="attach_camera">Camera</string>
    <string name="attach_gallery">Image</string>
    <string name="attach_document">Document</string>
    <string name="media">Media</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="view_contact">View Contact</string>
    <string name="group_info">Group Info</string>
    <string name="search_hint">Search …</string>
    <string name="alert_message_delete_conversation">Delete chat. Are you sure?</string>
    <string name="join_title">SIGN UP</string>
    <string name="hold_to_record">Hold to record</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="audio_permission">Audio Permission</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="contacts_permission">Contacts Permission</string>
    <string name="vibrate_permission">Vibrate Permission</string>
    <string name="receive_sms_permission">Receive sms Permission</string>
    <string name="read_sms_permission">Read sms Permission</string>
    <string name="call_phone_permission">Call Phone Permission</string>
    <string name="get_accounts_permission">Get accounts Permission</string>
    <string name="write_sync_settings_permission">Get accounts Permission</string>
    <string name="read_sync_settings_permission">Get accounts Permission</string>
    <string name="camera_permission_message">Camera permission allows you to take pictures and capture videos. Please allow in App Settings for additional functionality.</string>
    <string name="record_audio_permission_message">Record audio permission allows you to  record audios. Please allow in App Settings for additional functionality.</string>
    <string name="settings_audio_permission_message">Modify audio permission allows us access to your audios. Please allow in App Settings for additional functionality.</string>
    <string name="copy_message">Copy</string>
    <string name="transfer_message">Forward</string>
    <string name="share_message">Share</string>
    <string name="permission_alert">Permissions Alert</string>
    <string name="permission_alert_msg">You cannot use the application if you didn\'t allow read contacts permission .Thanks</string>
    <string name="you_couldnt_call_this_user">Couldn\'t place call. This User is not available now please try later</string>
    <string name="you_couldnt_call">Couldn\'t place call</string>
    <string name="about_title">About Us</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="title_language">Languages</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">YouTube</string>
    <string name="google_plus">Google PLus</string>
    <string name="managing_your_profile">Managing your profile</string>
    <string name="deleting_your_account">Deleting your account</string>
    <string name="saving_your_chat_history">Saving your chat history</string>
    <string name="using_group_chats">Using group chats</string>
    <string name="adding_contacts">Adding Contacts</string>
    <string name="deleting_contacts">Deleting Contacts</string>
    <string name="connection_problem">Connection Problem</string>
    <string name="problem_sending_or_receiving_messages">Problem Sending or Receiving messages</string>
</resources>