<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">


    <com.dostchat.dost.ui.FontsView
        android:id="@+id/emoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/bg_alert_call"
        android:gravity="center"
        android:padding="36dp"
        android:text="@string/permission_alert"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:padding="16dp"
        android:singleLine="false"
        android:text="@string/permission_alert_msg"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/allow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_margin="26dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/ok"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>
