<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.settings.FAQActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tv_manage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_menu_right"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/ic_menu_right"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/managing_your_profile"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGray" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_menu_right"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/ic_menu_right"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/deleting_your_account"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGray" />

            <TextView
                android:id="@+id/tv_saving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_menu_right"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/ic_menu_right"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/saving_your_chat_history"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGray" />

            <TextView
                android:id="@+id/tv_group_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_menu_right"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/ic_menu_right"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/using_group_chats"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGray" />

            <TextView
                android:id="@+id/tv_adding_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_menu_right"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/ic_menu_right"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/adding_contacts"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGray" />

            <TextView
                android:id="@+id/tv_delete_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_menu_right"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/ic_menu_right"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/deleting_contacts"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGray" />

            <TextView
                android:id="@+id/tv_connection_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_menu_right"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/ic_menu_right"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/connection_problem"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGray" />

            <TextView
                android:id="@+id/tv_problem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_menu_right"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/ic_menu_right"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/problem_sending_or_receiving_messages"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>