<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />


    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/below_shadow_rect" />

    <LinearLayout
        android:id="@+id/privacy_termes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_rect_ripple"
        android:clickable="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/privacy_termes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/terms_and_privacy_policy"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorGray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_rect_ripple"
        android:clickable="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/about_app_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/about_title"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorGray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lang_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_item_rect_ripple"
        android:clickable="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/lang_app_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_language"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorGray" />
    </LinearLayout>
</LinearLayout>